--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,22 +14,20 @@
 
     <hr>
 
-    <div>
-      <% bookList.forEach(function(book) { %>
+    <div class="row">
+      <% bookList.forEach(function(book, i) { %>
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title"><%= book.title %></h5>
             <h6 class="card-subtitle mb-2 text-muted"><%= book.author %></h6>
             <p class="card-text"> <%= book.description %></p>
-            <a href="#" class="card-link">Edit</a>
-            <a href="#" class="card-link">Delete</a>
+            <a href="/books/edit/<%= book._id %>" class="card-link">Edit</a>
+            <a href="/books/remove/<%= i %>" class="card-link">Delete</a>
           
           </div>
         </div>  
         <%})%>
-  
-     
-    </div>
+   </div>
 
 
   </body>
